--- a/Transfer.Web/Views/Carrier/Carrier.cshtml
+++ b/Transfer.Web/Views/Carrier/Carrier.cshtml
@@ -90,7 +90,7 @@
                         <div class="row blank-row"></div>
                         <div class="row">
                             <div class="col-12 col-md-6 dark-text contacts">
-                                Контакы: @Model.ContactFio, <a href="mailto: @Model.Email">@Model.Email</a>, <a href="tel: @Model.Phone">@Model.Phone</a>
+                                Контакы: @Model.ContactFio (@Model.ContactPosition), <a href="mailto: @Model.Email">@Model.Email</a>, <a href="tel: @Model.Phone">@Model.Phone</a>
                             </div>
                             <div class="col-12 col-md-3 dark-text">
                                 ОГРН: @Model.OGRN
