--- a/Transfer.Web/Views/Carrier/Save.cshtml
+++ b/Transfer.Web/Views/Carrier/Save.cshtml
@@ -137,6 +137,35 @@
             </div>
         </div>
     </div>
+    <div class="row form-row">
+        <div class="t-col col-12 col-md-3 form-group">
+            <div class="row">
+                <div class="col-12 white-text">
+                    Контактное лицо:
+                </div>
+                <div class="col-12">
+                    <div class="input-group input-group-icon">
+                        <i class="fas fa-pencil-alt input-group-text"></i>
+                        <input type="tel" asp-for="ContactFio" class="form-control" />
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="t-col col-12 col-md-3 form-group">
+            <div class="row">
+                <div class="col-12 white-text">
+                    Должность:
+                </div>
+                <div class="col-12">
+                    <div class="input-group input-group-icon">
+                        <i class="fas fa-pencil-alt input-group-text"></i>
+                        <input type="email" asp-for="ContactPosition" class="form-control" />
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
     <div class="row blank-row"></div>
     <div class="row">
         <div class="col-12 t-col" style="color: #fff;"><h3>Банковские реквизиты</h3></div>
