--- a/Transfer.Web/Views/Shared/_TripOptions.cshtml
+++ b/Transfer.Web/Views/Shared/_TripOptions.cshtml
@@ -24,4 +24,8 @@
     {
         <span><i class="fas fa-directions"></i> @to.Name</span><br />
     }
+    else if(to.Id == TripOptions.RSPayment.GetEnumGuid())
+    {
+        <span><i class="fas fa-university"></i> @to.Name</span><br />
+    }
 }
