--- a/Transfer.Web/Views/TripRequest/SearchResults.cshtml
+++ b/Transfer.Web/Views/TripRequest/SearchResults.cshtml
@@ -97,7 +97,7 @@
                             <div class="t-col col-12">Дата: @($"{c.TripDate:dd.MM.yyyy HH:mm}")</div>
                         </div>
                         <div class="row">
-                            <div class="t-col col-12">Пссажиры: @c.Passengers</div>
+                            <div class="t-col col-12">Пассажиры: @c.Passengers</div>
                         </div>
                         @if (c.TripOptions?.Any() ?? false)
                         {
