--- a/Transfer.Web/Views/Carrier/Save.cshtml
+++ b/Transfer.Web/Views/Carrier/Save.cshtml
@@ -146,7 +146,7 @@
                 <div class="col-12">
                     <div class="input-group input-group-icon">
                         <i class="fas fa-pencil-alt input-group-text"></i>
-                        <input type="tel" asp-for="ContactFio" class="form-control" />
+                        <input asp-for="ContactFio" class="form-control" />
                     </div>
                 </div>
             </div>
@@ -159,7 +159,7 @@
                 <div class="col-12">
                     <div class="input-group input-group-icon">
                         <i class="fas fa-pencil-alt input-group-text"></i>
-                        <input type="email" asp-for="ContactPosition" class="form-control" />
+                        <input asp-for="ContactPosition" class="form-control" />
                     </div>
                 </div>
             </div>
