--- a/Transfer.Web/Views/Carrier/SearchResults.cshtml
+++ b/Transfer.Web/Views/Carrier/SearchResults.cshtml
@@ -111,14 +111,13 @@
                     <i class="fas fa-map-marked"></i> <span style="color: #000;">@c.Address</span>
                 </div>
             </div>
-            <div class="row carrier">
+@*            <div class="row carrier">
                 <div class="t-col col-md-10 col-12 contacts">
-                    
                 </div>
                 <div class="t-col col-md-2 col-12 contacts go text-center">
                     <a asp-action="CarrierItem" asp-controller="Carrier" asp-route-carrierId="@c.Id"><span>перейти</span></a>
                 </div>
-            </div>
+            </div>*@
         </div>
     </div>
 }
