--- a/Transfer.Web/Views/TripRequest/Save.cshtml
+++ b/Transfer.Web/Views/TripRequest/Save.cshtml
@@ -70,7 +70,7 @@
                 <div class="t-col col-12 col-md-4 form-group">
                     <div class="row">
                         <div class="col-12 white-text">
-                            Контактное лицо: <span class="red-text">*</span>
+                            Контактное лицо:
                         </div>
                         <div class="col-12">
                             <div class="input-group input-group-icon">
@@ -83,7 +83,7 @@
                 <div class="t-col col-12 col-md-4 form-group">
                     <div class="row">
                         <div class="col-12 white-text">
-                            Email: <span class="red-text">*</span>
+                            Email:
                         </div>
                         <div class="col-12">
                             <div class="input-group input-group-icon">
