--- a/Transfer.Web/Views/TripRequest/Save.cshtml
+++ b/Transfer.Web/Views/TripRequest/Save.cshtml
@@ -2,11 +2,14 @@
 @using Transfer.Common.Extensions
 
 @section Styles {
-    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/select2-bootstrap-5-theme@1.2.0/dist/select2-bootstrap-5-theme.min.css" />
 }
 @section Scripts {
+    <script src="https://cdn.jsdelivr.net/gh/xcash/bootstrap-autocomplete@v2.3.7/dist/latest/bootstrap-autocomplete.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
     <script src="~/js/TripRequest/Save.js" crossorigin="anonymous"></script>
+    <script src="~/vjs/autocomplete.js" crossorigin="anonymous"></script>
 }
 
 
@@ -63,7 +66,7 @@
                         <div class="t-col col-12 form-group">
                             <div class="input-group input-group-icon">
                                 <i class="fas fa-search input-group-text"></i>
-                                @Html.Hidden("Data.FiasId", System.Guid.NewGuid(), 
+                                @Html.TextBox("Data.FiasId", "", 
                                 new { 
                                     @class = "form-control basicAutoComplete",
                                     @autocomplete="off",
