--- a/Transfer.Web/Views/Carrier/Save.cshtml
+++ b/Transfer.Web/Views/Carrier/Save.cshtml
@@ -99,7 +99,7 @@
         <div class="t-col col-12 col-md-3 form-group">
             <div class="row">
                 <div class="col-12 white-text">
-                    Email: <span class="red-text">*</span>
+                    Email:@* <span class="red-text">*</span>*@
                 </div>
                 <div class="col-12">
                     <div class="input-group input-group-icon">
