--- a/Transfer.Web/Views/Carrier/SearchResults.cshtml
+++ b/Transfer.Web/Views/Carrier/SearchResults.cshtml
@@ -9,24 +9,24 @@
         <div class="row blank-row"></div>
         <div class="row blank-row"></div>
         <div class="row">
-            <div class="t-col col-11 col-md-5 form-group">
+            <div class="t-col col-12 col-md-6 form-group">
                 <div class="input-group input-group-icon">
                     <i class="fas fa-map-marker-alt input-group-text"></i>
-                    <input asp-for="City" class="form-control" placeholder="В каком городе будем искать?" />
+                    <input asp-for="City" class="form-control" placeholder="Где расположена компания?" />
                 </div>
             </div>
-            <div class="col-1 t-col">
+@*            <div class="col-1 t-col">
                 <i class="far fa-question-circle fa-lg"></i>
-            </div>
-            <div class="t-col col-11 col-md-5 form-group">
+            </div>*@
+            <div class="t-col col-12 col-md-6 form-group">
                 <div class="input-group input-group-icon">
                     <i class="fas fa-map-marked input-group-text"></i>
                     <input asp-for="Name" class="form-control" placeholder="Как называется компания?" />
                 </div>
             </div>
-            <div class="col-1 t-col">
+@*            <div class="col-1 t-col">
                 <i class="far fa-question-circle fa-lg"></i>
-            </div>
+            </div>*@
         </div>
         <div class="row blank-row"></div>
         <div class="row">
@@ -43,10 +43,10 @@
 <div class="row blank-row"></div>
 <div class="row ordering">
     <div class="t-col col-3">
-        <i class="far fa-question-circle fa-lg"></i>
+        @*<i class="far fa-question-circle fa-lg"></i>*@
         Параметры сортировки запросов:
     </div>
-    <div class="t-col col-6">
+@*    <div class="t-col col-6">
         @Html.CheckBoxFor(x => x.OrderByName, new { @class="btn-check", autocomplete="off", onclick="DisableCheckboxes(this)" })
         <label class="btn btn-sm" for="OrderByName">
             <i class="fas fa-caret-down"></i>
@@ -64,8 +64,8 @@
             <i class="fas fa-caret-down"></i>
             <i class="fas fa-lock-open"></i>
         </label>
-    </div>
-    <div class="t-col col-2 text-end form-group">
+    </div>*@
+    <div class="t-col offset-6 col-2 text-end form-group">
         Выводить по:
     </div>
     <div class="t-col col-1 text-end form-group">
