--- a/Transfer.Web/Views/TripRequest/SearchResults.cshtml
+++ b/Transfer.Web/Views/TripRequest/SearchResults.cshtml
@@ -84,7 +84,7 @@
                             </div>
                             <div class="col-9">
                                 <div class="row">
-                                    <div class="t-col col-12"><i class="fas fa-shuttle-van"></i> Название класса транспортного средства</div>
+                                    <div class="t-col col-12"><i class="fas fa-comment-dots"></i> Откликов: @c.ReplaysCount</div>
                                     <div class="t-col col-12"><i class="fas fa-map-marked"></i> @c.AddressFrom</div>
                                     <div class="t-col col-12"><i class="fas fa-map-marked-alt"></i> @c.AddressTo</div>
                                     <div class="t-col col-12"><i class="far fa-user-circle"></i> @c.ContactFio, <a href="#">@c.ContactPhone</a>, <a href="#">@c.ContactEmail</a></div>
