--- a/Transfer.Web/Views/Carrier/SearchResults.cshtml
+++ b/Transfer.Web/Views/Carrier/SearchResults.cshtml
@@ -15,8 +15,8 @@
                     <input asp-for="City" class="form-control" placeholder="Где расположена компания?" />
                 </div>
             </div>
-@*            <div class="col-1 t-col">
-                <i class="far fa-question-circle fa-lg"></i>
+            @*            <div class="col-1 t-col">
+            <i class="far fa-question-circle fa-lg"></i>
             </div>*@
             <div class="t-col col-12 col-md-6 form-group">
                 <div class="input-group input-group-icon">
@@ -24,8 +24,8 @@
                     <input asp-for="Name" class="form-control" placeholder="Как называется компания?" />
                 </div>
             </div>
-@*            <div class="col-1 t-col">
-                <i class="far fa-question-circle fa-lg"></i>
+            @*            <div class="col-1 t-col">
+            <i class="far fa-question-circle fa-lg"></i>
             </div>*@
         </div>
         <div class="row blank-row"></div>
@@ -46,24 +46,24 @@
         @*<i class="far fa-question-circle fa-lg"></i>*@
         Параметры сортировки запросов:
     </div>
-@*    <div class="t-col col-6">
-        @Html.CheckBoxFor(x => x.OrderByName, new { @class="btn-check", autocomplete="off", onclick="DisableCheckboxes(this)" })
-        <label class="btn btn-sm" for="OrderByName">
-            <i class="fas fa-caret-down"></i>
-            <i class="fas fa-sort-alpha-down"></i>
-        </label>
-        &nbsp;&nbsp;&nbsp;
-        @Html.CheckBoxFor(x => x.OrderByRating, new { @class="btn-check", autocomplete="off", onclick="DisableCheckboxes(this)" })
-        <label class="btn btn-sm" for="OrderByRating">
-            <i class="fas fa-caret-down"></i>
-            <i class="fas fa-star"></i>
-        </label>
-        &nbsp;&nbsp;&nbsp;
-        @Html.CheckBoxFor(x => x.OrderByChecked, new { @class="btn-check", autocomplete="off", onclick="DisableCheckboxes(this)" })
-        <label class="btn btn-sm" for="OrderByChecked">
-            <i class="fas fa-caret-down"></i>
-            <i class="fas fa-lock-open"></i>
-        </label>
+    @*    <div class="t-col col-6">
+    @Html.CheckBoxFor(x => x.OrderByName, new { @class="btn-check", autocomplete="off", onclick="DisableCheckboxes(this)" })
+    <label class="btn btn-sm" for="OrderByName">
+    <i class="fas fa-caret-down"></i>
+    <i class="fas fa-sort-alpha-down"></i>
+    </label>
+    &nbsp;&nbsp;&nbsp;
+    @Html.CheckBoxFor(x => x.OrderByRating, new { @class="btn-check", autocomplete="off", onclick="DisableCheckboxes(this)" })
+    <label class="btn btn-sm" for="OrderByRating">
+    <i class="fas fa-caret-down"></i>
+    <i class="fas fa-star"></i>
+    </label>
+    &nbsp;&nbsp;&nbsp;
+    @Html.CheckBoxFor(x => x.OrderByChecked, new { @class="btn-check", autocomplete="off", onclick="DisableCheckboxes(this)" })
+    <label class="btn btn-sm" for="OrderByChecked">
+    <i class="fas fa-caret-down"></i>
+    <i class="fas fa-lock-open"></i>
+    </label>
     </div>*@
     <div class="t-col offset-6 col-2 text-end form-group">
         Выводить по:
@@ -76,21 +76,21 @@
 {
     <hr style="color: #fff; border: dashed 1px #007896;">
     <div class="row">
-@*        <div class="col-2">
-            <div class="row">
-                @if (c.Picture.IsNullOrEmpty())
-                {
-                    <div class="col-12 r-logo text-center"><img alt="" src="~/images/TR_PER_logo_NName.png" /></div>
-                }
-                else
-                {
-                    <div class="col-12 text-center">
-                        <div class="r-logo" style="margin: auto; border: solid 1px #0f4c71; height: 140px; width: 135px; border-radius: 18px; background-position: center center; background-size: cover; background-image: url('@Url.Action("GetFile", "File", new { fileId = c.Picture.Value } )');"></div>
-                    </div>
-                }
-            </div>
+        @*        <div class="col-2">
+    <div class="row">
+    @if (c.Picture.IsNullOrEmpty())
+    {
+    <div class="col-12 r-logo text-center"><img alt="" src="~/images/TR_PER_logo_NName.png" /></div>
+    }
+    else
+    {
+    <div class="col-12 text-center">
+    <div class="r-logo" style="margin: auto; border: solid 1px #0f4c71; height: 140px; width: 135px; border-radius: 18px; background-position: center center; background-size: cover; background-image: url('@Url.Action("GetFile", "File", new { fileId = c.Picture.Value } )');"></div>
+    </div>
+    }
+    </div>
 
-        </div>*@
+    </div>*@
         <div class="col-12">
             <div class="row carrier">
                 <div class="t-col col-12">
@@ -106,17 +106,20 @@
                 </div>
             </div>
             <div class="row carrier">
-                <div class="t-col col-12">
-                    <i class="fas fa-map-marked"></i> <span style="color: #000;">@c.Address</span>
+                <div class="t-col col-12 contacts">
+                    <i class="far fa-address-card"></i> <span style="color: #000;">@c.ContactFio (@c.ContactPosition)</span>, <a href="mailto: @c.ContactEmail">@c.ContactEmail</a>, <a href="tel: @c.ContactPhone">@c.ContactPhone</a>
                 </div>
+                @*<div class="t-col col-12">
+                <i class="fas fa-map-marked"></i> <span style="color: #000;">@c.Address</span>
+                </div>*@
             </div>
-@*            <div class="row carrier">
-                <div class="t-col col-md-10 col-12 contacts">
-                </div>
-                <div class="t-col col-md-2 col-12 contacts go text-center">
-                    <a asp-action="CarrierItem" asp-controller="Carrier" asp-route-carrierId="@c.Id"><span>перейти</span></a>
-                </div>
-            </div>*@
+            @*            <div class="row carrier">
+        <div class="t-col col-md-10 col-12 contacts">
+        </div>
+        <div class="t-col col-md-2 col-12 contacts go text-center">
+        <a asp-action="CarrierItem" asp-controller="Carrier" asp-route-carrierId="@c.Id"><span>перейти</span></a>
+        </div>
+        </div>*@
         </div>
     </div>
 }
