--- a/Transfer.Web/Views/TripRequest/SearchResults.cshtml
+++ b/Transfer.Web/Views/TripRequest/SearchResults.cshtml
@@ -79,7 +79,7 @@
                                         <div class="row blank-row"></div>
                                     }
 
-                                    <div class="col-12 t-col text-center go"><a asp-action="TripRequest" asp-controller="TripRequest" asp-route-requestId="@c.Id"><span>перейти</span></a></div>
+                                    <div class="col-12 t-col text-center go"><a asp-action="TripRequestShow" asp-controller="TripRequest" asp-route-requestId="@c.Id"><span>перейти</span></a></div>
                                 </div>
                             </div>
                             <div class="col-9">
