--- a/Transfer.Web/Views/TripRequest/Show.cshtml
+++ b/Transfer.Web/Views/TripRequest/Show.cshtml
@@ -63,7 +63,7 @@
                         </div>
                         <div class="row blank-row"></div>
                         <div class="row">
-                            <div class="col-12 t-col text-center go"><a asp-action="TripRequestShow" asp-controller="TripRequest" asp-route-requestId="@Model.Id"><span>отменить</span></a></div>
+                            <div class="col-12 t-col text-center go"><a asp-action="TripRequestDelete" asp-controller="TripRequest" asp-route-requestId="@Model.Id"><span>отменить</span></a></div>
                         </div>
                     </div>
                     <div class="col-6">
