--- a/Transfer.Web/Views/Carrier/Assets.cshtml
+++ b/Transfer.Web/Views/Carrier/Assets.cshtml
@@ -38,26 +38,30 @@
             {
                 <a asp-action="NewBus" asp-controller="Bus" asp-route-carrierId="@Model.OrganisationId"><div class="new-assert-link"><i class="fas fa-plus-circle"></i></div></a>
             }
+            else if (Model.AssetType == OrganisationAssetType.User)
+            {
+                <a asp-action="CarrierNewAccount" asp-controller="Account" asp-route-carrierId="@Model.OrganisationId"><div class="new-assert-link"><i class="fas fa-plus-circle"></i></div></a>
+            }
         </div>
     </div>
     @foreach (var c in Model.Results)
     {
         <hr style="color: #fff; border: dashed 1px #007896;">
         <div class="row">
-@*            <div class="col-2">
-                <div class="row">
-                    @if (c.Picture.IsNullOrEmpty())
-                    {
-                        <div class="col-12 r-logo text-center"><img alt="" src="~/images/TR_PER_logo_NName.png" /></div>
-                    }
-                    else
-                    {
-                        <div class="col-12 text-center">
-                            <div class="r-logo" style="margin: auto; border: solid 1px #0f4c71; height: 140px; width: 135px; border-radius: 18px; background-position: center center; background-size: cover; background-image: url('@Url.Action("GetFile", "File", new { fileId = c.Picture.Value } )');"></div>
-                        </div>
-                    }
-                </div>
-            </div>*@
+            @*            <div class="col-2">
+        <div class="row">
+        @if (c.Picture.IsNullOrEmpty())
+        {
+        <div class="col-12 r-logo text-center"><img alt="" src="~/images/TR_PER_logo_NName.png" /></div>
+        }
+        else
+        {
+        <div class="col-12 text-center">
+        <div class="r-logo" style="margin: auto; border: solid 1px #0f4c71; height: 140px; width: 135px; border-radius: 18px; background-position: center center; background-size: cover; background-image: url('@Url.Action("GetFile", "File", new { fileId = c.Picture.Value } )');"></div>
+        </div>
+        }
+        </div>
+        </div>*@
             <div class="col-12 assert-info">
                 <div class="row">
                     <div class="col-12"><strong>@c.Name</strong></div>
@@ -105,6 +109,14 @@
                     <div class="row">
                         <div class="col-12 offset-md-10 col-md-2 go">
                             <a asp-action="DriverItem" asp-controller="Driver" asp-route-carrierId="@Model.OrganisationId" asp-route-driverId="@c.Id"><span>Подробнее</span></a>
+                        </div>
+                    </div>
+                }
+                else if (Model.AssetType == OrganisationAssetType.User)
+                {
+                    <div class="row">
+                        <div class="col-12 offset-md-10 col-md-2 go">
+                            <a asp-action="CarrierAccountItem" asp-controller="Account" asp-route-carrierId="@Model.OrganisationId" asp-route-accountId="@c.Id"><span>Подробнее</span></a>
                         </div>
                     </div>
                 }
