--- a/Transfer.Web/Views/Account/CarrierAccountSave.cshtml
+++ b/Transfer.Web/Views/Account/CarrierAccountSave.cshtml
@@ -86,7 +86,7 @@
                 <div class="t-col col-12 col-md-4">
                     <div class="row">
                         <div class="t-col col-12 white-text">
-                            Отчество: <span class="red-text">*</span>
+                            Отчество:
                         </div>
                     </div>
                     <div class="row">
