--- a/Transfer.Web/Views/TripRequest/SearchResults.cshtml
+++ b/Transfer.Web/Views/TripRequest/SearchResults.cshtml
@@ -62,7 +62,7 @@
                 <div class="row">
                     <div class="col-9">
                         <div class="row">
-                            <div class="t-col col-12"><span style="font-size: 1.2rem;">@c.Name</span> <i class="fas fa-star fs-sm" style="color: #ecbf54"></i><i class="fas fa-star fs-sm" style="color: #ecbf54"></i><i class="fas fa-star fs-sm" style="color: #ecbf54"></i><i class="far fa-star fs-sm"></i><i class="far fa-star fs-sm"></i></div>
+                            <div class="t-col col-12"><span style="font-size: 1.2rem;">Заказ №@c.Identifier (от @c.Name)</span></div>
                         </div>
                         <div class="row">
                             <div class="col-3">
