--- a/Transfer.Web/Views/TripRequest/Save.cshtml
+++ b/Transfer.Web/Views/TripRequest/Save.cshtml
@@ -23,7 +23,7 @@
             }
             else
             {
-                <a class="top-button-a" asp-action="TripRequestShow" asp-controller="TripRequest" asp-route-requestId="@Model.Id">@Model.ChartererName @($"({Model.TripDate:dd.MM.yyyy})")</a>
+                <a class="top-button-a" asp-action="TripRequestShow" asp-controller="TripRequest" asp-route-requestId="@Model.Id">Заказ №@Model.Identifier от @Model.ChartererName @($"({Model.TripDate:dd.MM.yyyy})")</a>
             }
         </div>
     </div>
@@ -32,14 +32,11 @@
         <div class="t-col col-12 col-md-6 crb-avatar">
             Здравствуйте, @Security.CurrentAccount.FirstName @Security.CurrentAccount.LastName!
         </div>
-        <div class="t-col col-12 col-md-6 text-end crb-location">
-            <i class="fas fa-location-arrow"></i> Ваш регион: <span class="city">Александровск-Сахалинский</span>
-        </div>
     </div>
     <div class="row blank-row"></div>
     <div class="row">
         <div class="t-col col-12">
-            <h1 style="color: #0f4c71">@(Model.Id.IsNullOrEmpty() ? "Оформление нового заказа" : "Редактирование заказа")</h1>
+            <h1 style="color: #0f4c71">@(Model.Id.IsNullOrEmpty() ? "Оформление нового заказа" : $"Редактирование заказа №{Model.Identifier}")</h1>
         </div>
     </div>
     <div class="row blank-row"></div>
