--- a/Transfer.Web/Views/Shared/_LayoutC.cshtml
+++ b/Transfer.Web/Views/Shared/_LayoutC.cshtml
@@ -24,7 +24,7 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-controller="Home" asp-action="Index2">To markup</a>
                         </li>
-                        @if (!Transfer.Web.Models.Security.IsAuthenticated)
+                        @if (!Transfer.Web.Moduls.Security.IsAuthenticated)
                         {
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-controller="Home" asp-action="Login">Login</a>
