--- a/Transfer.Web/Views/TripRequest/Save.cshtml
+++ b/Transfer.Web/Views/TripRequest/Save.cshtml
@@ -238,16 +238,13 @@
             </div>
             <div class="row blank-row"></div>
             <div class="row form-row">
-                <div class="t-col the-error col-8">
+                <div class="t-col the-error col-6 col-md-10">
                     @if (!string.IsNullOrWhiteSpace(ViewBag.ErrorMsg))
                     {
                         <i class="fas fa-exclamation-triangle"></i> @ViewBag.ErrorMsg
                     }
                 </div>
-                <div class="t-col col-2 text-end">
-                    <button type="button" class="button-one-empty">Завершить</button>
-                </div>
-                <div class="t-col col-2 text-end">
+                <div class="t-col col-6 col-md-2 text-end">
                     <button type="submit" class="button-one">Сохранить</button>
                 </div>
             </div>
